--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/antonionoca/expressnewsfeed.git"
   },
+	"engines": {
+		"node": "7.10.0"
+	},
   "keywords": [],
   "author": "",
   "license": "ISC",
